# semantic-release

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  .urmzd.sr.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  action.yml  install.sh  llms.txt  sr.yaml  teasr.toml
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
action/: action.yml
crates/sr-ai/: Cargo.toml  README.md
crates/sr-ai/src/ai/: claude.rs  copilot.rs  gemini.rs  mod.rs
crates/sr-ai/src/commands/: commit.rs  mod.rs  rebase.rs
crates/sr-ai/src/git/: mod.rs
crates/sr-ai/src/ui/: mod.rs
crates/sr-cli/: Cargo.toml  README.md
crates/sr-cli/src/: main.rs
crates/sr-core/: CHANGELOG.md  Cargo.toml  README.md
crates/sr-core/src/: changelog.rs  commit.rs  config.rs  error.rs  git.rs  hooks.rs  lib.rs  release.rs  version.rs  version_files.rs
crates/sr-git/: Cargo.toml  README.md
crates/sr-git/src/: lib.rs
crates/sr-git/tests/: integration.rs
crates/sr-github/: Cargo.toml  README.md
crates/sr-github/src/: lib.rs
skills/semantic-release/: SKILL.md
skills/sr/: SKILL.md
