[package]
name = "sr-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git operations for semantic-release (native git CLI)"

[dependencies]
sr-core = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
